--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenido a mi Portafolio</h1>
+        <h1>Bienvenido a mi Portafolio, Prueba 2</h1>
         <nav>
             <ul>
                 <li><a href="#acerca">Acerca de mí</a></li>
